# APUE-learning

./: .clang-format  .gitignore  README.md
Some Interesting DIY/: InserestingClock.c
Some-Interesting-DIY/: preprocess.c
SomeInterestingDIY/: FarmerWolfSheepCabbageCrossTheRiver.cpp  InserestingClock.c  MyLexer.cpp  preprocess.c
doc/: 1.0.md  3.0.md  BuildApue.md  IO.md  newbie.md  signal.md
include/: signal_functions.h  sync_pipe.h  sync_signal.h  unp.h  user_functions.h
src/1.0/: printPID.c  printUIDGID.c  shell.c  shell2.c
src/3.0/: CanSeek  CanSeek.c  CreateHole  CreateNoHole  ReadAndWrite  seekIO.c
src/IO/: AddComment.c  CanSeek.c  CreateHole.c  CreateNoHole.c  DupShareFileOffset.c  ErrorHybridIO.c  IOSpeed.c  IO_speed.c  MultiThreadSeekAndWrite.c  MyDup.c  MyReadvAndWriteV.c  PrintFileFlag.c  ReadAndWrite.c  ReadLargeFIle.c  ReverseLargeFile.c  SingleThreadSeekAndWrite.c  direct_read.c  execises_5_4.c  execises_5_5.c  exercises_5_1.c  exercises_5_2.c  exercises_5_3.c  exercises_5_3_multi_thread.c  large_file.c  my_readv_and_writev.c  print_file_fl.c  reverse_file.c  seekIO.c  t_mktmp.c  t_pread.c  t_preadv.c  t_pwrite.c  t_pwritev.c  t_readv.c  t_writev.c  wrong_hybrid_IO.c
src/file/: ReadDirectory.cpp  filetype.c  t_access.c  t_chmod.c  t_mkdir.cpp  t_symlink.cpp  t_umask.c  t_unlink.cpp
src/newbie/: cp.c  cp2.c  errno.c  ls.c  printPID.c  printUIDGID.c  shell.c  shell2.c
src/pipe/: CharacterFilter.c  IntegerAddFilter.c  character_filter.c  integer_add_filter.c  (+6 more)
src/socket/daytimetcp/: CMakeLists.txt  daytimetcp_client.cpp  daytimetcp_server.cpp
(+97 files in other folders)
